--- a/components/go-lvszwmhz/overlays/development/deployment-patch.yaml
+++ b/components/go-lvszwmhz/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-lvszwmhz
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-lvszwmhz:4357e90aac2ce6dbc80a7ed885af3cc0c1669db4@sha256:37e67a7f09bfb87b2cd449eb12cfc3039c4c2e1b3b27abd38ff2f2bc6c4a0498
+          name: container-image
